[gd_scene load_steps=5 format=2]

[ext_resource path="res://fonts/new_dynamicfont.tres" type="DynamicFont" id=1]
[ext_resource path="res://images/tower.png" type="Texture" id=2]
[ext_resource path="res://images/tower2.png" type="Texture" id=3]
[ext_resource path="res://LevelUi.gd" type="Script" id=4]

[node name="LevelUi" type="CanvasLayer"]
script = ExtResource( 4 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="countLabel" type="Label" parent="HBoxContainer"]
margin_right = 152.0
margin_bottom = 38.0
custom_fonts/font = ExtResource( 1 )
text = "Escaped:"

[node name="countValueLabel" type="Label" parent="HBoxContainer"]
margin_left = 156.0
margin_right = 175.0
margin_bottom = 38.0
custom_fonts/font = ExtResource( 1 )
text = "0"

[node name="currWaveLabel" type="Label" parent="HBoxContainer"]
margin_left = 179.0
margin_right = 274.0
margin_bottom = 38.0
custom_fonts/font = ExtResource( 1 )
text = "Wave:"

[node name="currWaveValueLabel" type="Label" parent="HBoxContainer"]
margin_left = 278.0
margin_right = 297.0
margin_bottom = 38.0
custom_fonts/font = ExtResource( 1 )
text = "0"

[node name="coinLabel" type="Label" parent="HBoxContainer"]
margin_left = 301.0
margin_right = 396.0
margin_bottom = 38.0
custom_fonts/font = ExtResource( 1 )
text = "Coin:"

[node name="coinValueLabel" type="Label" parent="HBoxContainer"]
margin_left = 400.0
margin_right = 419.0
margin_bottom = 38.0
custom_fonts/font = ExtResource( 1 )
text = "0"

[node name="TimerContiner" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -204.0
margin_top = 25.0
margin_right = 204.0
margin_bottom = 63.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimerLabel" type="Label" parent="TimerContiner"]
margin_right = 323.0
margin_bottom = 38.0
custom_fonts/font = ExtResource( 1 )
text = "PrÃ³xima wave em: "

[node name="TimerValueLabel" type="Label" parent="TimerContiner"]
margin_left = 327.0
margin_right = 346.0
margin_bottom = 38.0
custom_fonts/font = ExtResource( 1 )
text = "0"

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -72.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1260.0
margin_bottom = 52.0

[node name="ButtonsContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer2"]
margin_right = 963.0
margin_bottom = 32.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="T1Button" type="TextureButton" parent="MarginContainer/HBoxContainer2/ButtonsContainer"]
margin_right = 32.0
margin_bottom = 32.0
toggle_mode = true
texture_normal = ExtResource( 2 )

[node name="T2Button" type="TextureButton" parent="MarginContainer/HBoxContainer2/ButtonsContainer"]
margin_left = 36.0
margin_right = 68.0
margin_bottom = 32.0
toggle_mode = true
texture_normal = ExtResource( 3 )

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer2"]
margin_left = 967.0
margin_right = 1240.0
margin_bottom = 32.0

[node name="RestartButton" type="Button" parent="MarginContainer/HBoxContainer2/HBoxContainer"]
margin_right = 57.0
margin_bottom = 32.0
text = "Restart"

[node name="PauseButton" type="Button" parent="MarginContainer/HBoxContainer2/HBoxContainer"]
margin_left = 61.0
margin_right = 111.0
margin_bottom = 32.0
text = "Pause"

[node name="StartButton" type="Button" parent="MarginContainer/HBoxContainer2/HBoxContainer"]
margin_left = 115.0
margin_right = 156.0
margin_bottom = 32.0
text = "Start"

[node name="GameSpeedButton" type="Button" parent="MarginContainer/HBoxContainer2/HBoxContainer"]
margin_left = 160.0
margin_right = 188.0
margin_bottom = 32.0
text = ">>"

[node name="NextWaveButton" type="Button" parent="MarginContainer/HBoxContainer2/HBoxContainer"]
margin_left = 192.0
margin_right = 273.0
margin_bottom = 32.0
text = "Next Wave"
